@@ -2,11 +2,12 @@ package kernel360.trackyweb.rent.application.service;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
-import kernel360.trackycore.core.infrastructure.entity.RentEntity;
+import kernel360.trackycore.core.common.api.ApiResponse;
+import kernel360.trackyweb.rent.application.dto.RentDetailResponse;
 import kernel360.trackyweb.rent.application.dto.RentRequest;
 import kernel360.trackyweb.rent.application.dto.RentResponse;
 import kernel360.trackyweb.rent.infrastructure.repository.RentRepository;
@@ -18,32 +19,27 @@ public class RentService {
 
 	private final RentRepository rentRepository;
 
-	// 차량 등록
-	@Transactional
-	public RentResponse crate(RentRequest request) {
-		RentEntity entity = new RentEntity(
-			UUID.randomUUID().toString(),
-			request.getRentStime(),
-			request.getRentEtime(),
-			request.getRenterName(),
-			request.getRenterPhone(),
-			request.getPurpose(),
-			"RENTED",
-			request.getRentLoc(),
-			request.getRentLat(),
-			request.getRentLon(),
-			request.getReturnLoc(),
-			request.getReturnLat(),
-			request.getReturnLon()
-		);
-		return RentResponse.from(rentRepository.save(entity));
+	// UUID 자동 생성
+	private String generateShortUUID() {
+		return UUID.randomUUID().toString().replace("-", "").substring(0, 8);
 	}
 
-	@Transactional(readOnly = true)
-	public List<RentResponse> findAll() {
-		return rentRepository.findAll().stream()
+
+	/**
+	 * 렌트 정보 전체 조회
+	 */
+	public ApiResponse<List<RentResponse>> getAll() {
+		return ApiResponse.success(rentRepository.findAll().stream()
 			.map(RentResponse::from)
-			.toList();
+			.collect(Collectors.toList()));
 	}
 
+	/**
+	 * 대여 신규 등록
+	 * @param rentRequest
+	 * @return 등록 성공한 대여 detail
+	 */
+	public ApiResponse<RentDetailResponse> create(RentRequest rentRequest){
+
+	}
 }
